fix hook tooltip z-index

--- a/ui/lobby/css/app/_hook-chart.scss
+++ b/ui/lobby/css/app/_hook-chart.scss
@@ -61,7 +61,7 @@
   display: none;
   background: $c-bg-box;
   position: absolute;
-  z-index: z('popup');
+  z-index: z('powertip');
   .inner {
     @extend %flex-column;
     text-align: center;
